--- a/test-mlir/lit.site.cfg.py.in
+++ b/test-mlir/lit.site.cfg.py.in
@@ -2,6 +2,7 @@
 
 config.silicon_binary_dir = "@SILICON_BINARY_DIR@"
 config.silicon_tools_dir = "@SILICON_TOOLS_DIR@"
+config.llvm_tools_dir = "@LLVM_TOOLS_DIR@"
 
 import lit.llvm
 lit.llvm.initialize(lit_config, config)
