[HIR] Add InferTypes pass and basic ops
Add a simple `hir.inferrable_type`, `hir.let`, `hir.unify_type`, and
`hir.store` operation. These can be used to express a first few type
inference problems, for example when assigning the value of one let
binding to another.

Also add the InferTypes pass that processes `hir.unify_type` operations
in the IR.

--- a/lib/Dialect/HIR/CMakeLists.txt
+++ b/lib/Dialect/HIR/CMakeLists.txt
@@ -1,6 +1,10 @@
 add_silicon_dialect_library(SiliconHIR
   HIRDialect.cpp
+  HIROps.cpp
+  HIRTypes.cpp
 
   LINK_LIBS PUBLIC
   MLIRIR
 )
+
+add_subdirectory(Transforms)
