--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 2
-          submodules: false
+          submodules: true
 
       - name: Set git safe directory
         run: |
