[HIR] Generalize type inference to also support values
Rename the `hir.inferrable_type` and `hir.unify_type` ops to
`hir.inferrable` and `hir.unify`, respectively. Adjust their definition
to allow them to operate on any type of SSA value, not just `!hir.type`.
This now allows the InferTypes pass to also infer integer constants.
In the future we may want to rename this pass to something more generic.

--- a/lib/Dialect/HIR/CMakeLists.txt
+++ b/lib/Dialect/HIR/CMakeLists.txt
@@ -6,6 +6,8 @@ add_silicon_dialect_library(SiliconHIR
 
   LINK_LIBS PUBLIC
   MLIRIR
+  MLIRInferTypeOpInterface
+  MLIRSideEffectInterfaces
 )
 
 add_subdirectory(Transforms)
