--- a/lib/Dialect/HIR/Transforms/CMakeLists.txt
+++ b/lib/Dialect/HIR/Transforms/CMakeLists.txt
@@ -1,10 +1,20 @@
+set(LLVM_LINK_COMPONENTS native)
 add_silicon_dialect_library(SiliconHIRTransforms
+  EvalConstRegions.cpp
   EvalConsts.cpp
   InferTypes.cpp
 
   LINK_LIBS PUBLIC
-  SiliconHIR
+  MLIRArithToLLVM
+  MLIRBuiltinToLLVMIRTranslation
+  MLIRControlFlowToLLVM
+  MLIRExecutionEngine
+  MLIRFuncToLLVM
+  MLIRIndexToLLVM
   MLIRIR
+  MLIRLLVMCommonConversion
   MLIRPass
+  MLIRTransforms
   MLIRTransformUtils
+  SiliconHIR
 )
