[Syntax] Add basic lexer
Add a basic lexer that can split a source file into tokens. Only
supports whitespace, comments, identifiers, a handful of symbols, and a
few first keywords.

--- a/tools/silc/CMakeLists.txt
+++ b/tools/silc/CMakeLists.txt
@@ -2,6 +2,7 @@ get_property(dialect_libs GLOBAL PROPERTY SILICON_DIALECT_LIBS)
 
 set(libs
   ${dialect_libs}
+  SiliconSyntax
   CIRCTComb
   CIRCTHW
   CIRCTSeq
