[MIR] Add basic MIR dialect

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(Codegen)
 add_subdirectory(HIR)
+add_subdirectory(MIR)
 add_subdirectory(Syntax)
 
 add_silicon_library(SiliconRegisterDialects
@@ -15,6 +16,7 @@ add_silicon_library(SiliconRegisterDialects
   MLIRFuncInlinerExtension
   MLIRIR
   SiliconHIR
+  SiliconMIR
 )
 
 add_silicon_library(SiliconRegisterPasses
