[MIR] Add call and return ops

--- a/lib/MIR/CMakeLists.txt
+++ b/lib/MIR/CMakeLists.txt
@@ -6,6 +6,7 @@ add_silicon_dialect_library(SiliconMIR
 
   LINK_LIBS PUBLIC
   MLIRIR
+  MLIRControlFlowInterfaces
   MLIRInferTypeOpInterface
   MLIRSideEffectInterfaces
 )
