[HIR] Add function visibility; make all but top-level constness private

--- a/lib/HIR/CMakeLists.txt
+++ b/lib/HIR/CMakeLists.txt
@@ -5,6 +5,7 @@ add_silicon_dialect_library(SiliconHIR
   Types.cpp
 
   LINK_LIBS PUBLIC
+  SiliconSupport
   MLIRFuncDialect
   MLIRIR
   MLIRControlFlowInterfaces
