--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,4 +73,4 @@ include_directories(${SILICON_INCLUDE_DIR})
 add_subdirectory(include/silicon)
 add_subdirectory(lib)
 add_subdirectory(tools)
-add_subdirectory(test-mlir)
+add_subdirectory(test)
