--- a/test/lit.site.cfg.py.in
+++ b/test/lit.site.cfg.py.in
@@ -6,4 +6,4 @@ config.llvm_tools_dir = "@LLVM_TOOLS_DIR@"
 
 import lit.llvm
 lit.llvm.initialize(lit_config, config)
-lit_config.load_config(config, "@SILICON_SOURCE_DIR@/test-mlir/lit.cfg.py")
+lit_config.load_config(config, "@SILICON_SOURCE_DIR@/test/lit.cfg.py")
